[package]
name = "asg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Asciinema SVG Generator - Convert .cast files to animated SVG"
license = "MIT"
repository = "https://github.com/yourusername/asg"
keywords = ["asciinema", "svg", "terminal", "animation", "converter"]
categories = ["command-line-utilities", "multimedia::encoding"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for remote cast files
reqwest = { version = "0.12", features = ["blocking", "json"] }

# VTE (Virtual Terminal Emulator) parsing
vte = "0.13"

# SVG generation
svg = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Color handling
rgb = "0.8"

[dev-dependencies]
tempfile = "3.10"
