[workspace]
members = ["asg", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kingsword <kingsword09@gmail.com>"]
homepage = "https://github.com/kingsword09/asg"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kingsword09/asg"
rust-version = "1.80.0"

[workspace.dependencies]
clap = { version = "4.5.46", features = ["derive"] }
