[workspace]
members = ["asg", "xtask"]
resolver = "3"

[workspace.package]
authors = ["Kingsword <kingsword09@gmail.com>"]
edition = "2024"
homepage = "https://github.com/kingsword09/asg"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kingsword09/asg"
rust-version = "1.85.0"

[workspace.dependencies]
clap = { version = "4.5.46", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
