[package]
categories = ["command-line-utilities", "multimedia::encoding"]
name = "asg"
version = "0.1.2"
# documentation = "https://docs.rs/asg"
description = "Asciinema SVG Generator - Convert .cast files to animated SVG"
keywords = ["asciinema", "svg", "terminal", "animation", "converter"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# CLI argument parsing
clap = { workspace = true, features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# VTE (Virtual Terminal Emulator) parsing
vte = "0.15"

# SVG generation
svg = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Color handling
rgb = "0.8"

# HTTP client for remote cast files
# Non-WASM uses reqwest (see target-specific dependencies below)

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.wasm32-wasip2.dependencies]
waki = "0.5"

[dev-dependencies]
tempfile = "3.10"
